updated gh-action to run script

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -5,13 +5,17 @@ on:
 		- cron:  '30  6 * * *'
 
 jobs:
-	commit:
+	update-README:
 		runs-on: ubuntu-latest
 
 		steps:
 			- name: Checkout repository
 				uses: actions/checkout@v5
 
+			- name: Set up Python
+				uses: actions/setup-python@v5
+				with:
+					python-version: '3.10'
 
-			- name: Update file and commit
-				run: |
+			-name: Run Python Script
+				run: python get-stats.py
