--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,3 +1,4 @@
+
 name: Update README
 
 on: 
@@ -9,6 +10,7 @@ permissions:
 
 jobs: 
   update-README: 
+    if: false   # comment out to run
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout repository
